--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,65 +1,25 @@
-== watch-addon
+== Watch Addon changes
 :idprefix: id_ 
-(choose one, do not modify, then add a second sentence with a brief description, starting with - "The watch-addon addon enables blah blah...)
-This addon provides *standalone* functionality, and *exports services* for use in other addons. 
 This addon provides *standalone* functionality.
-This addon *exports services* for use in other addons. 
-This addon *provides classes* for use in other addons. 
-This addon is a 'Furnace container' that provides *lifecycle* and *service registry* support for dependent addons.
-        
-=== Dependencies: None (or)
-=== Depends on
-[options="header"]
-|===
-|Addon |Exported |Optional
-|DEP1
-|yes
-|no
-|DEP2
-|yes
-|yes
-|===
 
-== Setup
+Add-on development done faster
 
-This Addon requires the following installation steps.
+=== Installation
 
-=== Add configuration to pom.xml 
+From Forge CLI:
 
-To use this addon, you must add it as a dependency in the *pom.xml* of your `forge-addon` classified artifact:
-(Make sure the dependency is put all the way to the left, and uses 3 spaces for indentation of GAV)
-[source,xml]
+[source,shell]
 ----
-<dependency>
-   <groupId>org.watch.addon</groupId>
-   <artifactId>watch-addon</artifactId>
-   <classifier>forge-addon</classifier>
-   <version>${version}</version>
-</dependency>
+addon-install-from-git --url https://github.com/forge/wildfly-swarm-addon.git
 ----
-== Features
-ABCFactory for simple ABC blah:: 
-Allows for blah blah
-+
-[source,java]
+
+Then you can use it like:
+
+[source,shell]
 ----
-@Inject private ABCFactory factory;
-ABC abc = factory.createABC();
+[watch-addon]$ addon-watch-start
+***INFO*** Monitoring changes on org.jboss.forge.addon:watch,1.0.0-SNAPSHOT
+***INFO*** Monitoring changes on org.jboss.forge.addon:wildfly-swarm,1.0.0-SNAPSHOT
 ----
-+
-[TIP] 
-====
-If your addon uses a container that does not support "@Inject" annotations, services such as the `ABCFactory` may also be 
-accessed via the `AddonRegistry`:
-----
-Imported<ABCFactory> imported = addonRegistry.getServices(ABCFactory.class);
-ABCFactory factory = imported.get();
-----
-==== 
-Creating a new XYZ instance:: 
-Causes XYZ to occur
-+
-[source,java]
-----
-XYZ xyz = factory.createXYZ();
-----
+
+Whenever you mvn clean install your add-on project, it will be automatically installed and available in Forge
